[tool.poetry]
name = "rl-book"
version = "0.1.0"
description = "Python codes to generate every figure in the book \"Reinforcement Learning: An Introduction\" Second Edition"
authors = ["Rene Delgado <rene854@gmail.com>"]
packages = [
    {include = "chapter2"},
    {include = "chapter3"},
    {include = "chapter4"},
    {include = "chapter5"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numba = "^0.53.1"
tqdm = "^4.60.0"
seaborn = "^0.11.1"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
